--- a/css/errorpage.css
+++ b/css/errorpage.css
@@ -9,8 +9,7 @@
 .page_404  img{ width:100%;}
 
 .four_zero_four_bg{
- 
- background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
+    background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
     height: 400px;
     background-position: center;
  }
@@ -20,14 +19,21 @@
  font-size:80px;
  }
  
-  .four_zero_four_bg h3{
-			 font-size:80px;
-			 }
+.four_zero_four_bg h3{
+	font-size:80px;
+}
 			 
-			 .link_404{			 
+.link_404{			 
 	color: #fff!important;
     padding: 10px 20px;
     background: #39ac31;
     margin: 20px 0;
-    display: inline-block;}
-	.contant_box_404{ margin-top:-50px;}
+    display: inline-block;
+}
+.contant_box_404{ 
+    margin-top:-50px;
+}
+.text-center{
+    text-align: center;
+}
+
